--- a/includes/http.yaml
+++ b/includes/http.yaml
@@ -9,3 +9,9 @@
 #
 #- from github.com/tinuva/home-assistant-config
 base_url: !secret base_url
+use_x_forwarded_for: true
+trusted_proxies:
+  - 172.36.0.6
+cors_allowed_origins:
+    - https://google.com
+    - https://www.home-assistant.io
