--- a/packages/bathroom_humidity.yaml
+++ b/packages/bathroom_humidity.yaml
@@ -8,7 +8,7 @@ binary_sensor:
         min_gradient: 0.02
       master_bathroom_humidity_falling:
         entity_id: sensor.humidity_158d00023475b0
-        friendly_name: Master  Bathroom Humidity Falling
+        friendly_name: Master Bathroom Humidity Falling
         sample_duration: 7200
         min_gradient: -0.01
 
@@ -16,10 +16,10 @@ automation:
   - alias: "Turn on Master Bathroom Fan"
     trigger:
       - platform: state
-        entity_id: sensor.humidity_158d00023475b0, sensor.humidity_158d00020177c3   # 1st bathroom 2nd bedroom   
+        entity_id: sensor.humidity_158d00023475b0, sensor.humidity_158d0002011a32   # 1st bathroom 2nd outside   
     condition:
       - condition: template
-        value_template: "{{ (states.sensor.humidity_158d00023475b0.state|float - states.sensor.humidity_158d00020177c3.state|float > 10) or (states.sensor.humidity_158d00023475b0.state|float == 99.9) or states.binary_sensor.master_bathroom_humidity_rising.attributes['gradient']|float > 0.04 }}"
+        value_template: "{{ (states.sensor.humidity_158d00023475b0.state|float - states.sensor.humidity_158d0002011a32.state|float > 10) or (states.sensor.humidity_158d00023475b0.state|float == 99.9) or states.binary_sensor.master_bathroom_humidity_rising.attributes['gradient']|float > 0.04 }}"
       - condition: state  # 'day' condition: from sunrise until sunset
         entity_id: sun.sun
         state: 'above_horizon'
@@ -32,8 +32,8 @@ automation:
       - platform: state
         entity_id: sensor.humidity_158d00023475b0       
     condition:
-      - condition: template
-        value_template: "{{states.sensor.humidity_158d00023475b0.state|float - states.sensor.humidity_158d00020177c3.state|float < 7 and states.light.sonoff_master_bathroom_1.state == 'on' and states.binary_sensor.master_bathroom_humidity_falling.state == 'off' and states.binary_sensor.master_bathroom_humidity_rising.state == 'off'}}"
+      - condition: template # bathroom vs outside
+        value_template: "{{states.sensor.humidity_158d00023475b0.state|float - states.sensor.humidity_158d0002011a32.state|float < 7 and states.light.sonoff_master_bathroom_1.state == 'on' and states.binary_sensor.master_bathroom_humidity_falling.state == 'off' and states.binary_sensor.master_bathroom_humidity_rising.state == 'off'}}"
       - condition: state  # 'day' condition: from sunrise until sunset
         entity_id: sun.sun
         state: 'above_horizon'
