add lovelace cards, upnp, initial cleanup

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -16,12 +16,6 @@ frontend:
   themes: !include_dir_merge_named themes
 http: !include includes/http.yaml
 
-# Inputs
-input_boolean: !include includes/input_booleans.yaml
-#input_datetime: !include includes/input_datetimes.yaml
-input_select: !include includes/input_selects.yaml
-input_number: !include includes/input_numbers.yaml
-
 # Logging and history
 logger: !include includes/logger.yaml
 recorder: !include includes/recorder.yaml
@@ -43,16 +37,11 @@ shelly: !include includes/shelly.yaml
 
 # Sensors
 sensor: !include includes/sensors.yaml
-binary_sensor: !include includes/binary_sensors.yaml
 
 # Others
 alert: !include includes/alerts.yaml
 person: !include includes/persons.yaml
 zone: !include includes/zones.yaml
-group: !include includes/groups.yaml
-automation old: !include_dir_merge_list automations
-#switch: !include includes/switches.yaml
-#weather: !include includes/weather.yaml
 shell_command: !include includes/shell_commands.yaml
 #notify: !include includes/notify.yaml
 light: !include includes/lights.yaml
@@ -61,3 +50,4 @@ speedtestdotnet: !include includes/speedtestdotnet.yaml
 discovery: !include includes/discovery.yaml
 mqtt: !include includes/mqtt.yaml
 influxdb: !include includes/influxdb.yaml
+upnp: !include includes/upnp.yaml
