--- a/packages/bathroom_humidity.yaml
+++ b/packages/bathroom_humidity.yaml
@@ -16,10 +16,10 @@ automation:
   - alias: "Turn on Master Bathroom Fan"
     trigger:
       - platform: state
-        entity_id: sensor.humidity_158d00023475b0, sensor.humidity_158d0002011a32   # 1st bathroom 2nd outside   
+        entity_id: sensor.humidity_158d00023475b0, sensor.humidity_158d00020177c3   # 1st bathroom 2nd master bedroom
     condition:
       - condition: template
-        value_template: "{{ (states.sensor.humidity_158d00023475b0.state|float - states.sensor.humidity_158d0002011a32.state|float > 10) or (states.sensor.humidity_158d00023475b0.state|float == 99.9) or states.binary_sensor.master_bathroom_humidity_rising.attributes['gradient']|float > 0.04 }}"
+        value_template: "{{ (states.sensor.humidity_158d00023475b0.state|float - states.sensor.humidity_158d00020177c3.state|float > 10) or (states.sensor.humidity_158d00023475b0.state|float == 99.9) or states.binary_sensor.master_bathroom_humidity_rising.attributes['gradient']|float > 0.04 }}"
       - condition: state  # 'day' condition: from sunrise until sunset
         entity_id: sun.sun
         state: 'above_horizon'
@@ -30,10 +30,10 @@ automation:
   - alias: "Turn off Master Bathroom Fan"
     trigger:
       - platform: state
-        entity_id: sensor.humidity_158d00023475b0       
+        entity_id: sensor.humidity_158d00023475b0, sensor.humidity_158d00020177c3   # 1st bathroom 2nd master bedroom
     condition:
       - condition: template # bathroom vs outside
-        value_template: "{{states.sensor.humidity_158d00023475b0.state|float - states.sensor.humidity_158d0002011a32.state|float < 7 and states.light.sonoff_master_bathroom_1.state == 'on' and states.binary_sensor.master_bathroom_humidity_falling.state == 'off' and states.binary_sensor.master_bathroom_humidity_rising.state == 'off'}}"
+        value_template: "{{states.sensor.humidity_158d00023475b0.state|float - states.sensor.humidity_158d00020177c3.state|float < 7 and states.light.sonoff_master_bathroom_1.state == 'on' and states.binary_sensor.master_bathroom_humidity_falling.state == 'off' and states.binary_sensor.master_bathroom_humidity_rising.state == 'off'}}"
       - condition: state  # 'day' condition: from sunrise until sunset
         entity_id: sun.sun
         state: 'above_horizon'
