--- a/packages/surepetcare_shell_cmds.yaml
+++ b/packages/surepetcare_shell_cmds.yaml
@@ -2,6 +2,7 @@
 ## Inputs
 input_select:
   surepet_door_lock_state_num:
+    name: Select Pet Door mode
     options:
       - "0"
       - "1"
@@ -23,7 +24,7 @@ input_boolean:
   
   petdoor_mode_locked_all:
     name: Pet Door Locked All
-    icon: mdi:door-closed-locked
+    icon: mdi:door-closed
 
 ## Shell commands
 shell_command:
@@ -31,7 +32,7 @@ shell_command:
   # https://community.home-assistant.io/t/using-secrets-yaml-with-shell-commands/4478/11
   surepet_cli_auth: '/config/sure_petcare/sp_cli.py --update -e {{ user }} -p {{ pass }}'
   surepet_cli_list_flaps: '/config/sure_petcare/sp_cli.py ls_flaps'
-  surepet_cli_set_door_lock: /config/sure_petcare/sp_cli.py set_flap_lock 204121 {{ states('input_select.surepet_door_lock_state_num')|int }}
+  surepet_cli_set_door_lock: /config/sure_petcare/sp_cli.py set_flap_lock {{ flap_id }} {{ states('input_select.surepet_door_lock_state_num')|int }}
 
 ## Automations
 automation:
@@ -42,6 +43,8 @@ automation:
       entity_id: input_select.surepet_door_lock_state_num
     action:
       service: shell_command.surepet_cli_set_door_lock
+      data:
+        flap_id: !secret surepetcare_kitchen_flap_id
   
   ### card select then unselect any other
   - alias: Pet Door Mode set bools
