--- a/configuration.yaml
+++ b/configuration.yaml
@@ -50,3 +50,14 @@ speedtestdotnet: !include includes/speedtestdotnet.yaml
 discovery: !include includes/discovery.yaml
 mqtt: !include includes/mqtt.yaml
 influxdb: !include includes/influxdb.yaml
+
+alexa:
+  smart_home:
+    locale: en-GB
+    endpoint: https://api.amazonalexa.com/v3/events
+    client_id: !secret alexa_client_id
+    client_secret: !secret alexa_client_secret
+    filter:
+      include_domains:
+        - switch
+        - light
