add harmony hub and mqtt vacuum

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -34,6 +34,8 @@ envisalink: !include includes/envisalink.yaml
 xiaomi_aqara: !include includes/xiaomi_aqara.yaml
 surepetcare: !include includes/surepetcare.yaml
 shelly: !include includes/shelly.yaml
+vacuum:
+  - platform: mqtt
 
 # Sensors
 sensor: !include includes/sensors.yaml
