update surepet automations to be configurable via the dash

--- a/includes/sensors.yaml
+++ b/includes/sensors.yaml
@@ -152,3 +152,14 @@
   duration:
     hours: 24
 ### Sureflap end
+
+- platform: time_date
+  display_options:
+    - 'time'
+    - 'date'
+    - 'date_time'
+    - 'date_time_utc'
+    - 'date_time_iso'
+    - 'time_date'
+    - 'time_utc'
+    - 'beat'
