more upnp fixes needed after ha update

--- a/packages/upnp_bandwidth.yaml
+++ b/packages/upnp_bandwidth.yaml
@@ -9,7 +9,7 @@ sensor:
     mikrotik_total_bandwidth:
       friendly_name: "Total Bandwidth"
       unit_of_measurement: 'GBs'
-      value_template: "{{((states('sensor.mikrotik_router_bytes_received')|float / 1000000000) + (states('sensor.mikrotik_router_bytes_sent')|float / 1000000000))|round(2)}}"
+      value_template: "{{((states('sensor.mikrotik_router_b_received')|float / 1000000000) + (states('sensor.mikrotik_router_b_sent')|float / 1000000000))|round(2)}}"
 
 #### Sample lovelace
 #- type: custom:mini-graph-card #Traffic
