--- a/includes/shelly.yaml
+++ b/includes/shelly.yaml
@@ -8,10 +8,10 @@ devices:  #configure devices
   #  entity_id: kitchen
   #  light_switch: true  #add this switch as a light
   #  name: Kitchen
-  #- id: "E097ED"
-  #  entity_id: removed
-  #  light_switch: true  #add this switch as a light
-  #  name: removed
+  - id: "E097ED"
+    entity_id: back-garage-light
+    light_switch: true  #add this switch as a light
+    name: Back Garage
   - id: "2472C6"
     entity_id: outside-kitchen-front
     light_switch: true  #add this switch as a light
@@ -28,3 +28,11 @@ devices:  #configure devices
     entity_id: braai-lights
     light_switch: true  #add this switch as a light
     name: Braai Room Lights
+  - id: "E098068CCA22"
+    entity_id: outside-back-lights
+    light_switch: true  #add this switch as a light
+    name: Outside Back Light
+  - id: "98F4ABF32146"
+    entity_id: outside-switch-water-sprayers
+    light_switch: false  #add this switch as a light
+    name: Water Sprayers
