--- a/packages/alarm.yaml
+++ b/packages/alarm.yaml
@@ -33,8 +33,8 @@ automation:
           Alarm was triggered on:
           {%- set domains = ['binary_sensor'] -%}
           {%- for domain in domains -%}
-          {%- for item in states[domain] if ((item.attributes.device_class is defined and item.attributes['device_class']|lower == "opening") or (item.attributes.device_class is defined and item.attributes['device_class']|lower == "motion") and item.state|lower == "on") -%}
-            {{ item.attributes.friendly_name }}{%- if not loop.last %}, {% endif -%}
+          {%- for item in states[domain]  if ((item.attributes.device_class is defined and item.state|string|lower == "on") and ((item.attributes['device_class']|lower) == "opening" or item.attributes['device_class']|lower == "motion")) -%}
+            {{ item.attributes.friendly_name }} {{ item.attributes['last_tripped_time'] }} {{ item.state }}{%- if not loop.last %}, {% endif -%}
           {%- endfor -%}
           {%- endfor -%}
     - service: notify.slack
@@ -45,7 +45,7 @@ automation:
           *ALARM TRIGGERED!* on:
           {%- set domains = ['binary_sensor'] -%}
           {%- for domain in domains -%}
-          {%- for item in states[domain] if ((item.attributes.device_class is defined and item.attributes['device_class']|lower == "opening") or (item.attributes.device_class is defined and item.attributes['device_class']|lower == "motion") and item.attributes['last_tripped_time']|int < 60) -%}
-            {{ item.attributes.friendly_name }}{%- if not loop.last %}, {% endif -%}
+          {%- for item in states[domain]  if ((item.attributes.device_class is defined and item.state|string|lower == "on") and ((item.attributes['device_class']|lower) == "opening" or item.attributes['device_class']|lower == "motion")) -%}
+            {{ item.attributes.friendly_name }} {{ item.attributes['last_tripped_time'] }} {{ item.state }}{%- if not loop.last %}, {% endif -%}
           {%- endfor -%}
           {%- endfor -%}
