fine tune alarm notification

--- a/packages/alarm.yaml
+++ b/packages/alarm.yaml
@@ -34,7 +34,7 @@ automation:
           {%- set domains = ['binary_sensor'] -%}
           {%- for domain in domains -%}
           {%- for item in states[domain]  if ((item.attributes.device_class is defined and item.state|string|lower == "on") and ((item.attributes['device_class']|lower) == "opening" or item.attributes['device_class']|lower == "motion")) -%}
-            {{ item.attributes.friendly_name }} {{ item.attributes['last_tripped_time'] }} {{ item.state }}{%- if not loop.last %}, {% endif -%}
+            {{ " " }}{{ item.attributes.friendly_name }}{%- if not loop.last %},{% endif -%}
           {%- endfor -%}
           {%- endfor -%}
     - service: notify.slack
@@ -46,6 +46,6 @@ automation:
           {%- set domains = ['binary_sensor'] -%}
           {%- for domain in domains -%}
           {%- for item in states[domain]  if ((item.attributes.device_class is defined and item.state|string|lower == "on") and ((item.attributes['device_class']|lower) == "opening" or item.attributes['device_class']|lower == "motion")) -%}
-            {{ item.attributes.friendly_name }} {{ item.attributes['last_tripped_time'] }} {{ item.state }}{%- if not loop.last %}, {% endif -%}
+            {{ " " }}{{ item.attributes.friendly_name }}{%- if not loop.last %},{% endif -%}
           {%- endfor -%}
           {%- endfor -%}
