--- a/packages/vacuum.yaml
+++ b/packages/vacuum.yaml
@@ -20,7 +20,7 @@ sensor:
 automation:
   ### Notify state change
   - alias: Notify when Robot State Change
-    description: otify when Robot State Change
+    description: Notify when Robot State Change
     trigger:
     - entity_id: vacuum.rockrobo
       platform: state
@@ -63,27 +63,6 @@ automation:
         target: ["#general"]
         message: >
           Vacuum Robot Error: {{ states.sensor.vacuum_error_code.state }} {{ states.sensor.vacuum_error_message.state }} 
-  ### Notify last clean results
-  - alias: Notify when Robot State Change
-    description: Notify when Robot State Change
-    trigger:
-    - entity_id: vacuum.rockrobo
-      platform: state
-      from: 'cleaning'
-      to: 'returning'
-    condition: []
-    action:
-    - service: notify.slack
-      data_template:
-        title: 'Vacuum Robot'
-        target: ["#general"]
-        message: >
-          Vacuum Robot last cleaning stats:
-          Duration: {{ (states.vacuum.rockrobo.attributes.last_run_stats.duration|int)/60 }} minutes{{- '\n' -}}
-          Area: {{ states.vacuum.rockrobo.attributes.last_run_stats.area }} m2{{- '\n' -}}
-
-#          Start time: {{ states.vacuum.rockrobo.attributes.last_run_stats.startTime|int|timestamp_custom("%d.%m.%Y %H:%M") }}{{- '\n' -}}
-#          End time: {{ states.vacuum.rockrobo.attributes.last_run_stats.endTime|int|timestamp_custom("%d.%m.%Y %H:%M") }}{{- '\n' -}}
 
   ### Notify when failed to docked after returning
   - alias: Notify when Robot failed to dock
@@ -101,3 +80,37 @@ automation:
         target: ["#general"]
         message: >
           Vacuum Robot failed to dock!
+
+
+  ### Notify last clean results
+  - alias: Notify when Robot State Change
+    description: Notify when Robot State Change
+    trigger:
+    - entity_id: vacuum.rockrobo
+      platform: state
+      from: 'cleaning'
+      to: 'returning'
+    condition: []
+    action:
+    - service: script.notify_robot_cleaning_stats
+
+script:
+  notify_robot_cleaning_stats:
+    sequence:
+      - service: camera.snapshot
+        data_template:
+          entity_id: camera.rockrobo_map
+          filename: "/config/www/cam_captures/rockrobo_map_{{ now ().year }}_{{ now ().month }}_{{ now ().day }}_{{ now ().hour }}_{{ now ().minute }}.jpg"
+      - delay: 
+          seconds: 5
+      - service: notify.slack
+        data_template:
+          target: ["#general"]
+          message: >
+            Vacuum Robot last cleaning stats:
+            Duration: {{ (states.vacuum.rockrobo.attributes.last_run_stats.duration|int)/60 }} minutes{{- '\n' -}}
+            Area: {{ states.vacuum.rockrobo.attributes.last_run_stats.area }} m2{{- '\n' -}}
+#          Start time: {{ states.vacuum.rockrobo.attributes.last_run_stats.startTime|int|timestamp_custom("%d.%m.%Y %H:%M") }}{{- '\n' -}}
+#          End time: {{ states.vacuum.rockrobo.attributes.last_run_stats.endTime|int|timestamp_custom("%d.%m.%Y %H:%M") }}{{- '\n' -}}
+          data:
+            file: "/config/www/cam_captures/rockrobo_map_{{ now ().year }}_{{ now ().month }}_{{ now ().day }}_{{ now ().hour }}_{{ now ().minute }}.jpg"
