--- a/includes/alerts.yaml
+++ b/includes/alerts.yaml
@@ -22,8 +22,7 @@ front_garage_door:
   can_acknowledge: true  # Optional, default is true
   skip_first: true  # Optional, false is the default
   notifiers:
-    - mobile_app_mi_9t
-    - mobile_app_nokia_6_1
+    - all_phones
 back_garage_door:
   name: Back Garage door is open
   done_message: Back Garage door is closed
